// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SimpleTable Datum 1`] = `
<div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Status
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Long Field Name
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Getter 1`] = `
<div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Status
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Long Field Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Number
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          22
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          33
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          44
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Label Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
      >
        Test
      </h1>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="mylabel"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Namespace
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          UID
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Labels
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources1.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          {"mylabel1":"myvalue1"}
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources2.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          {"mykey2":"mylabel"}
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Name Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
      >
        Test
      </h1>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="phonyresources2"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Namespace
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          UID
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Labels
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources2.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          {"mykey2":"mylabel"}
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Namespace Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
      >
        Test
      </h1>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="MyNamespace3"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Namespace
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          UID
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Labels
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources3.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          {"mykey3":"myvalue3"}
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Namespace Select 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
      >
        Test
      </h1>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                        style="overflow-wrap: anywhere;"
                      >
                        MyNamespace1
                        <span>
                          , 
                        </span>
                        <b>
                          +1
                        </b>
                      </p>
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder=""
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator MuiAutocomplete-clearIndicatorDirty"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Namespace
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          UID
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Labels
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources0.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources1.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          {"mylabel1":"myvalue1"}
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Number Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
      >
        Test
      </h1>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="30"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Namespace
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Number
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources3.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          30
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Reflect In URL 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Test changing the page and rows per page.
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      <b>
        Current URL search:
      </b>
       
      ?p=2
    </p>
    <table
      class="MuiTable-root makeStyles-table"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
            scope="col"
          >
            Namespace
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
            scope="col"
          >
            Number
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            5
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 6
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 6
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            6
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 7
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 7
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            7
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 8
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 8
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            8
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 9
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 9
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            9
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots SimpleTable Reflect In URL With Prefix 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Test changing the page and rows per page.
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      <b>
        Current URL search:
      </b>
       
      ?p=2
    </p>
    <table
      class="MuiTable-root makeStyles-table"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
            scope="col"
          >
            Namespace
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
            scope="col"
          >
            Number
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 0
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 0
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Name 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Namespace 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots SimpleTable UID Search 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
      >
        Test
      </h1>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-end MuiGrid-justify-content-xs-flex-end"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                aria-expanded="false"
                class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                role="combobox"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    style="margin-top: 0px;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                      data-shrink="true"
                      for="namespaces-filter"
                      id="namespaces-filter-label"
                    >
                      Namespaces
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="namespaces-filter"
                        placeholder="Filter"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiFormControl-root MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled MuiFormLabel-focused MuiInputLabel-focused"
                  data-shrink="true"
                  for="standard-search"
                  id="standard-search-label"
                >
                  Search
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-focused MuiInput-focused MuiInputBase-formControl MuiInput-formControl"
                  role="search"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                    id="standard-search"
                    placeholder="Filter"
                    type="search"
                    value="phony0"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                aria-controls="standard-search"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Clear
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <span />
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Namespace
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          UID
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell"
          scope="col"
        >
          Labels
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          mydefinition.phonyresources0.io
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          phony0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
